# ai_compliance_analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 87c81d15bc09_initial_schema.py
app/: config.py  database.py  encryption.py  llm.py  main.py  schemas.py  scoring.py  vocabulary_guard.py
app/api/: dependencies.py  middleware.py
app/api/routers/: jobs.py  overrides.py
app/api/v1/: router.py
app/db/: database.py  db_insert_test.py  models.py
app/llm/: client.py  extraction.py
app/models/: db.py  domain.py
app/pipeline/: graph.py
app/pipeline/nodes/: aggregate_risk.py  check_gdpr.py  extract_clauses.py  (+2 more)
app/rag/: rag_chunking.py  rag_embeddings.py  rag_ingest.py  rag_models.py  rag_query.py  rag_retrieve.py  rag_service.py
app/schema/: examples.py  schemas.py
app/tools/: checklist_tool.py  pinecone_tool.py
app/workflow/: processor.py  risk.py
data/: requirements.yaml
docs/: demo-script.md  evaluation-plan.md  guardrails.md  output-schema.md  project-overview.md  rag-data-strategy.md  rule-engine-vs-vector-db.md  scope.md  use-cases.md
tests/: create_fixtures.py  db_insert_test.py  rag_ingest_test.py  test_aggregate_risk.py  test_api_jobs.py  test_check_gdpr.py  test_config.py  test_database.py  test_domain_models.py  test_encryption.py  test_extract_clauses.py  test_gate_decision.py  test_graph.py  test_parse_document.py  test_requirements.py  test_scoring.py  test_tools.py  test_vocabulary_guard.py
tests/fixtures/: sample_msa.docx
(+6 files in other folders)
